Cleanup and fixed memory leak in convolution.cpp. Added kernel scaling to reduce error. Convolution now writes output to file.

--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,4 @@ frontend/src/App.js
 backend/convolution_files/input.txt
 backend/convolution_files/output_image.txt
 backend/convolution_files/test.png
+backend/convolution_files/result_matrix.txt
